<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/question_1_container"
            style="@style/question_container_style">

            <TextView
                style="@style/question_style"
                android:text="@string/question_1" />

            <RadioGroup
                android:id="@+id/question_1_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/question_1_first_logo_radio"
                    style="@style/question_radio_button_style"
                    android:text="" />

                <RadioButton
                    android:id="@+id/question_1_second_logo_radio"
                    style="@style/question_radio_button_style"
                    android:text="" />

                <RadioButton
                    android:id="@+id/question_1_third_logo_radio"
                    style="@style/question_radio_button_style"
                    android:text="" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout style="@style/radio_group_linear_layout_style">

                    <ImageView
                        android:id="@+id/question_1_first_logo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/blackberry_logo" />

                </LinearLayout>

                <LinearLayout style="@style/radio_group_linear_layout_style">

                    <ImageView
                        android:id="@+id/question_1_second_logo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:contentDescription="@string/app_name"
                        android:scaleType="centerCrop"
                        android:src="@drawable/android_logo" />

                </LinearLayout>

                <LinearLayout style="@style/radio_group_linear_layout_style">

                    <ImageView
                        android:id="@+id/question_1_third_logo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/lulu_logo" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_2_container"
            style="@style/question_container_style">

            <TextView
                style="@style/question_style"
                android:text="@string/question_2" />

            <RadioGroup
                android:id="@+id/question_2_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/question_2_first_logo_radio"
                    style="@style/question_radio_button_style"
                    android:text="" />

                <RadioButton
                    android:id="@+id/question_2_second_logo_radio"
                    style="@style/question_radio_button_style"
                    android:text="" />

                <RadioButton
                    android:id="@+id/question_2_third_logo_radio"
                    style="@style/question_radio_button_style"
                    android:text="" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout style="@style/radio_group_linear_layout_style">

                    <ImageView
                        android:id="@+id/question_2_first_logo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/flipkart_logo" />

                </LinearLayout>

                <LinearLayout style="@style/radio_group_linear_layout_style">

                    <ImageView
                        android:id="@+id/question_2_second_logo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/starbucks_logo_2" />

                </LinearLayout>

                <LinearLayout style="@style/radio_group_linear_layout_style">

                    <ImageView
                        android:id="@+id/question_2_third_logo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/starbucks_logo_3" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_3_container"
            style="@style/question_container_style">

            <TextView
                style="@style/question_style"
                android:text="@string/question_3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout style="@style/checkbox_group_layout_style">

                    <CheckBox
                        android:id="@+id/question_3_first_checkbox"
                        style="@style/question_checkbox_style"
                        android:text="" />

                    <ImageView
                        android:id="@+id/question_3_first_checkbox_logo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/netflix_logo" />

                </LinearLayout>

                <LinearLayout style="@style/checkbox_group_layout_style">

                    <CheckBox
                        android:id="@+id/question_3_second_checkbox"
                        style="@style/question_checkbox_style"
                        android:text="" />

                    <ImageView
                        android:id="@+id/question_3_second_checkbox_logo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/amazon_logo" />

                </LinearLayout>

                <LinearLayout style="@style/checkbox_group_layout_style">

                    <CheckBox
                        android:id="@+id/question_3_third_checkbox"
                        style="@style/question_checkbox_style"
                        android:text="" />

                    <ImageView
                        android:id="@+id/question_3_third_checkbox_logo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/bing_logo" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_4_container"
            style="@style/question_container_style">

            <TextView
                style="@style/question_style"
                android:text="@string/question_4" />

            <ImageView
                android:id="@+id/question_4_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/flipkart_logo" />

            <EditText
                android:id="@+id/question_4_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_response_here"
                android:inputType="text" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/question_5_container"
            style="@style/question_container_style">

            <TextView
                style="@style/question_style"
                android:text="@string/question_5" />

            <RadioGroup
                android:id="@+id/question_5_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/question_5_first_radio"
                    style="@style/question_radio_button_style"
                    android:text="" />

                <RadioButton
                    android:id="@+id/question_5_second_radio"
                    style="@style/question_radio_button_style"
                    android:text="" />

                <RadioButton
                    android:id="@+id/question_5_third_radio"
                    style="@style/question_radio_button_style"
                    android:text="" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout style="@style/radio_group_linear_layout_style">

                    <ImageView
                        android:id="@+id/question_5_first_radio_logo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/pepsi_logo" />

                </LinearLayout>

                <LinearLayout style="@style/radio_group_linear_layout_style">

                    <ImageView
                        android:id="@+id/question_5_second_radio_logo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/dominos_logo" />

                </LinearLayout>

                <LinearLayout style="@style/radio_group_linear_layout_style">

                    <ImageView
                        android:id="@+id/question_5_third_radio_logo"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/uber_logo" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_6_container"
            style="@style/question_container_style">

            <TextView
                style="@style/question_style"
                android:text="@string/question_6" />

            <ImageView
                android:id="@+id/question_6_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/old_apple_logo" />

            <EditText
                android:id="@+id/question_6_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_response_here"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_7_container"
            style="@style/question_container_style">

            <TextView
                style="@style/question_style"
                android:text="@string/question_7" />

            <ImageView
                android:id="@+id/question_7_logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/udacity_logo" />

            <EditText
                android:id="@+id/question_7_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_response_here"
                android:inputType="text" />
        </LinearLayout>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:onClick="checkQuiz"
            android:text="@string/submit" />
    </LinearLayout>
</ScrollView>